<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_game"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/winning_eleven"
                android:contentDescription="@string/image_game"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_game"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_game"
                android:layout_toRightOf="@id/tv_name"
                android:layout_toEndOf="@id/tv_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/winning_eleven"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_genre_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/genre_name"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_toRightOf="@id/tv_genre_name"
                android:layout_toEndOf="@id/tv_genre_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/action"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_genre_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/release_date"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_genre_name"
                android:layout_toRightOf="@id/tv_release_date"
                android:layout_toEndOf="@id/tv_release_date"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/_2000"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_release_date"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/description_detail"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_description_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/desc_detail"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>