<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_game"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:src="@drawable/winning_eleven"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_game" />

        <TextView
            android:id="@+id/tv_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winning_eleven"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/iv_game"
            android:layout_toEndOf="@id/iv_game" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="14sp"
            android:layout_toRightOf="@id/iv_game"
            android:layout_toEndOf="@id/iv_game"
            android:layout_below="@id/tv_game"/>

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release"
            android:textSize="14sp"
            android:layout_toRightOf="@id/iv_game"
            android:layout_toEndOf="@id/iv_game"
            android:layout_below="@id/tv_genre"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            android:layout_toRightOf="@id/iv_game"
            android:layout_toEndOf="@id/iv_game"
            android:layout_below="@id/tv_release"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:layout_below="@id/tv_description"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>